# PrismAI

./: .gitignore  .gitmodules  README.md  env.yml  environment.yml  jupyter.sh  pyproject.toml  req.yml  requirements.txt  study.sh
data/: fast_detect_gpt
logs/: binoculars.json  e5-small-lora.json  radar.json  roberta-Hello-SimpleAI.json
logs/finetuning/: gpt2-ft-frozen.json  roberta-base-ft-frozen.json  roberta-base-ft.json
logs/finetuning/roberta-base/: arxiv_papers.json  blog_authorship_corpus.json  bundestag.json  cnn_news.json  de.json  en.json  euro_court_cases.json  gutenberg_en.json  house_of_commons.json  spiegel_articles.json  student_essays.json
logs/finetuning/roberta-base-frozen/: arxiv_papers.json  blog_authorship_corpus.json  bundestag.json  cnn_news.json  de.json  en.json  euro_court_cases.json  gutenberg_en.json  house_of_commons.json  spiegel_articles.json  student_essays.json
logs/luminar_cnn/gpt2/: arxiv_papers.json  en.json  gutenberg_en.json  house_of_commons.json  spiegel_articles.json  student_essays.json
models/: luminar_gpt2_4k.pth  luminar_llama2_4k.pth
src/: append_intermediate_likelihoods.py  append_metrics.py  baselines.ipynb  baselines_finetuning.ipynb  baselines_models.ipynb  baselines_script.py  baselines_script_ray.py  baselines_statistical.ipynb  calc_transition_scores.py  calculate_metrics.ipynb  causal_lm.py  colorbar.ipynb  compute_features.py  debug_test.py  decoding_strategy.py  detector.py  eda.ipynb  fast_detect_gpt  features.ipynb  generator_example_output.json  ghostbuster_baseline.ipynb  ghostwriter-creation.ipynb  ghostwriter-simple-baseline-binary.ipynb  ghostwriter-simple-baseline.ipynb  ghostwriter-statistics.ipynb  ghostwriter_creation.ipynb  ghostwriter_simple_baseline.ipynb  ghostwriter_statistics.ipynb  handling_unbalanced_data.py  image_detection.ipynb  lrec_2026-GhostWriter-baselines-eval.ipynb  lrec_2026-GhostWriter-baselines-gondor.ipynb  lrec_2026-GhostWriter-baselines-supervised.ipynb  lrec_2026-GhostWriter-baselines.ipynb  luminar-RAID-benchmarking.ipynb  luminar-full-train-PrismAI.ipynb  luminar-full-train-RAID_none.ipynb  luminar-full-train-RAID_none_PrismAI.ipynb  luminar-full-train.ipynb  luminar_ablation.ipynb  (+52 more)
src/benchmarking/raid/: RAID_predictions_no_adversarial.json  luminar-PrismAI-benchmarking.ipynb  luminar-RAID-benchmarking.ipynb  luminar-full-train-RAID.ipynb
src/data_collector/: collected_item.py  collector.py  common_crawl.ipynb  main.ipynb  mongodb_client.py  orchestrator.py  visualizer.py
src/data_collector/agents/: ai_agent.py  ollama_agent.py  openai_agent.py
src/data_collector/collectors/: arxiv_collector.py  blog_corpus_collector.py  bundestag_collector.py  cnn_news_collector.py  euro_court_cases_collector.py  gutenberg_collector.py  house_of_commons_collector.py  news_api_collector.py  open_legal_data_collector.py  religion_collector.py  spiegel_collector.py  student_essays_collector.py
src/data_collector/processes/: process_ArxivCollector.py  process_BundestagCollector.py  process_CNNNewsCollector.py  process_EuroCourtCasesCollector.py  process_GutenbergCollector.py  process_HouseOfCommonsCollector.py  process_StudentEssaysCollector.py
src/data_hub/: hub.py  pipeline.py  sequential_data_processor.py
src/gateway/: README.md  main.py
src/hyper_causal/: Dockerfile  hyper_causal.py  hyper_causal_dto.py  main.py
src/luminar/: baselines.py  classifier.py  data.py  detector.py  eda.ipynb  encoder.py  features.py  image_detection.ipynb  luminar_model.py  model.py  model_training.ipynb  mongo.py  sequence_classifier.py  sequence_trainer.py  utils.py
src/luminar/baselines/: core.py  (+5 more)
src/notebook_checkpoints/: gemma2b_4k.ipynb  llama2_4k_stopwords.ipynb
src/prismai/: causal_lm.py  decoding_strategy.py  detector.py
src/prismai_features/: data.py  model.py
src/sequence_metrics/: results_Ghostbuster.json  results_M4.json  results_MAGE.json  results_PrismAI_v2.json  results_RAID_none.json  results_SeqXGPT.json
src/simple_dataset/: __init__.py  dataset.py
src/training/: luminar_sequence_training.ipynb  luminar_sequence_training_v2.ipynb  train_luminar_sequence.py
src/transition_scores/: abc.py  data.py  model.py  mongo.py  scorer.py  utils.py
(+114 files in other folders)
