[project]
name = "prismai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.3.0",
    "bitsandbytes>=0.45.2",
    "evaluate>=0.4.3",
    "lightning>=2.5.0.post0",
    "nltk>=3.9.1",
    "numpy>=2.2.2",
    "optimum[onnxruntime-gpu]>=1.24.0",
    "pymongo>=4.11",
    "python-dotenv>=1.0.1",
    "ray[tune]>=2.42.0",
    "scikit-learn>=1.6.1",
    "spacy>=3.8.4",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "tqdm>=4.67.1",
    "transformers>=4.48.3",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ipython>=8.32.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.0",
    "notebook>=7.3.2",
    "pip>=25.0",
    "pylsp-rope>=0.1.17",
    "pytest>=8.3.4",
    "python-lsp-server[all]>=1.12.2",
    "ruff>=0.9.5",
    "seaborn>=0.13.2",
    "tensorboard>=2.18.0",
]
conversion = [
    "bs4>=0.0.2",
    "dkpro-cassis>=0.9.1",
    "frontend>=0.0.3",
    "openai>=1.61.1",
    "pandas>=2.2.3",
    "pymupdf>=1.25.3",
    "spiegel-scraper>=1.1.1",
]
