[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prismai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.3.0",
    "matplotlib>=3.10.6",
    "IPython>=9.6.0",
    "seaborn>=0.13.2",
    "bitsandbytes>=0.45.2",
    "datasets>=3.6.0",
    "dotenv>=0.9.9",
    "evaluate>=0.4.3",
    "nltk>=3.9.1",
    "numba>=0.61.2",
    "numpy>=2.2.2",
    "openai>=1.61.1",
    "optimum[onnxruntime-gpu]>=1.24.0",
    "pyarrow>=17.0.0",
    "pymongo>=4.11",
    "python-dotenv>=1.0.1",
    "ray[default,tune]==2.46",
    "scikit-learn>=1.6.1",
    "tiktoken>=0.9.0",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "tqdm>=4.67.1",
    "transformers>=4.48.3",
    "ulid>=1.1",
]

[project.optional-dependencies]
dev = [
    "basedpyright>=1.28.3",
    "ipykernel>=6.29.5",
    "ipython>=8.32.0",
    "ipywidgets>=8.1.7",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.0",
    "notebook>=7.3.2",
    "pip>=25.0",
    "pylsp-rope>=0.1.17",
    "pytest>=8.3.4",
    "python-lsp-server[all]>=1.12.2",
    "ruff>=0.9.5",
    "seaborn>=0.13.2",
    "tensorboard>=2.18.0",
]
conversion = [
    "bs4>=0.0.2",
    "dkpro-cassis>=0.9.1",
    "frontend>=0.0.3",
    "openai>=1.61.1",
    "pandas>=2.2.3",
    "pymupdf>=1.25.3",
    "spiegel-scraper>=1.1.1",
]

[tool.setuptools]
# Tell setuptools that code lives under src/
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]
exclude = ["tests*", "docs*", "examples*", "notebooks*", "scripts*"]

# Include common data files inside packages
[tool.setuptools.package-data]
"*" = [
  "*.json", "*.yaml", "*.yml", "*.ini", "*.cfg", "*.txt", "*.md",
  "*.csv", "*.tsv",
  "*.pt", "*.bin", "*.model", "*.dict", "*.spacy", "*.pkl", "*.joblib",
  "static/**/*", "templates/**/*"
]

[tool.basedpyright]
typeCheckingMode = "standard"
reportIncompatibleMethodOverride = false
reportIncompatibleVariableOverride = false
reportRedeclaration = false
